[project]
name = "aerosense-layout-designer"
version = "0.1.0"
description = "Interactive tool for designing Aerosense node layouts on blade geometries"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.31.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "plotly>=5.18.0",
    "seaborn>=0.12.0",
    "kaleido>=0.2.1",
]
